--- a/custom_live_scale/views/live_scale_view.xml
+++ b/custom_live_scale/views/live_scale_view.xml
@@ -1,32 +1,31 @@
 <odoo>
-    <data>
-        <!-- Form View to Display Live Weight -->
-        <record id="view_live_scale_form" model="ir.ui.view">
-            <field name="name">live.scale.form</field>
-            <field name="model">live.scale</field>
-            <field name="arch" type="xml">
-                <form string="Live Scale">
-                    <sheet>
-                        <group>
-                            <field name="weight" readonly="1" />
-                            <field name="unit" readonly="1" />
-                        </group>
-                    </sheet>
-                </form>
-            </field>
-        </record>
+    <record id="view_live_scale_form" model="ir.ui.view">
+        <field name="name">live.scale.form</field>
+        <field name="model">live.scale</field>
+        <field name="arch" type="xml">
+            <form string="Live Scale">
+                <sheet>
+                    <group>
+                        <!-- Add the live scale widget -->
+                        <div class="oe_title">
+                            <h2>Live Scale Data</h2>
+                        </div>
+                        <div id="live_scale_widget" class="o_live_scale_widget">
+                            <span class="o_live_scale_weight">Fetching weight...</span> 
+                            <span class="o_live_scale_unit">kg</span>
+                        </div>
+                    </group>
+                    <footer>
+                        <button string="Fetch Data" type="object" name="fetch_scale_data" class="btn-primary"/>
+                    </footer>
+                </sheet>
+            </form>
+        </field>
+    </record>
 
-        <!-- Menu Item -->
-        <menuitem name="Live Scale" id="menu_live_scale_root" sequence="10" />
-        <menuitem name="Live Scale Weight" id="menu_live_scale_weight"
-                  parent="menu_live_scale_root" action="action_live_scale" />
+    <menuitem id="live_scale_menu" name="Live Scale" sequence="10"/>
 
-        <!-- Action -->
-        <record id="action_live_scale" model="ir.actions.act_window">
-            <field name="name">Live Scale</field>
-            <field name="res_model">live.scale</field>
-            <field name="view_mode">form</field>
-            <field name="target">current</field>
-        </record>
-    </data>
+    <act_window id="action_live_scale" name="Live Scale"
+                res_model="live.scale" view_mode="form"
+                menu_id="live_scale_menu"/>
 </odoo>
