--- a/devices/views/devices_views.xml
+++ b/devices/views/devices_views.xml
@@ -1,53 +1,36 @@
+<!-- real_estate/views/real_estate_view.xml -->
 <odoo>
-<record id="Record_action" model="ir.actions.act_window">
-    <field name="name">Name of Record</field>
-    <field name="type">ir.actions.act_window</field>
-    <field name="res_model">model.record</field>
-    <field name="view_mode">tree,form</field>
-    <field name="help" type="html">
-        <p class="o_view_nocontent_smiling_face">
-            Create a new record!
-        </p>
-    </field>
- </record>
- <menuitem id="menu_id"
-         name="Menu Name"
-         parent="parent_menu_root"
-         action="record_action"
-         sequence="10"/>
-         <record id="record_view_form" model="ir.ui.view">
-    <field name="name">record.name.form</field>
-    <field name="model">record.model</field>
-    <field name="arch" type="xml">
-        <form>
-            <sheet>
-                <div class="oe_title">
-                    <h1>
-                        <field name="reference_no" readonly="1"/>
-                    </h1>
-                </div>
-                <group>
+    <record id="view_real_estate_property_form" model="ir.ui.view">
+        <field name="name">real.estate.property.form</field>
+        <field name="model">real.estate.property</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
                     <group>
-                        <field name="name_id"/>
-                        <field name="date"/>
-                        <field name="age"/>
-                        <field name="gender"/>
-                        <field name="note"/>
+                        <field name="name"/>
+                        <field name="description"/>
+                        <notebook>
+                            <page string="Offers">
+                                <field name="offer_ids"/>
+                            </page>
+                            <page string="Other Info">
+                                <field name="other_info"/>
+                            </page>
+                        </notebook>
                     </group>
-                </group>
-            </sheet>
-        </form>
-    </field>
- </record>
- <record id="record_view_tree" model="ir.ui.view">
-   <field name="name">record.name.tree</field>
-   <field name="model">record.model</field>
-   <field name="arch" type="xml">
-       <tree>
-           <field name="name_id"/>
-           <field name="age"/>
-           <field name="gender"/>
-       </tree>
-   </field>
-</record>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="view_real_estate_property_tree" model="ir.ui.view">
+        <field name="name">real.estate.property.tree</field>
+        <field name="model">real.estate.property</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="description"/>
+            </tree>
+        </field>
+    </record>
 </odoo>
