--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,4 +1,21 @@
 <odoo>
+    <!-- Define the action first -->
+    <record id="action_devices" model="ir.actions.act_window">
+        <field name="name">Devices</field>
+        <field name="res_model">device</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Create the first device.
+            </p>
+        </field>
+    </record>
+
+    <!-- Define the menuitems -->
+    <menuitem id="menu_devices_root" name="Devices" sequence="10"/>
+    <menuitem id="menu_devices" name="Manage Devices" parent="menu_devices_root" action="odoo_device.action_devices"/>
+    
+    <!-- Define the views -->
     <record id="view_device_form" model="ir.ui.view">
         <field name="name">device.form</field>
         <field name="model">device</field>
@@ -28,20 +45,6 @@
                 <field name="purchase_date"/>
                 <field name="warranty_expiry"/>
             </tree>
-        </field>
-    </record>
-
-    <menuitem id="menu_devices_root" name="Devices" sequence="10"/>
-    <menuitem id="menu_devices" name="Manage Devices" parent="menu_devices_root" action="action_devices"/>
-    
-    <record id="action_devices" model="ir.actions.act_window">
-        <field name="name">Devices</field>
-        <field name="res_model">device</field>
-        <field name="view_mode">tree,form</field>
-        <field name="help" type="html">
-            <p class="oe_view_nocontent_create">
-                Create the first device.
-            </p>
         </field>
     </record>
 </odoo>
