--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <!-- Define the action first -->
+    <!-- Define the action -->
     <record id="action_devices" model="ir.actions.act_window">
         <field name="name">Devices</field>
         <field name="res_model">device</field>
@@ -13,8 +13,8 @@
 
     <!-- Define the menuitems -->
     <menuitem id="menu_devices_root" name="Devices" sequence="10" parent="base.menu_settings"/>
-    <menuitem id="menu_devices" name="Manage Devices" parent="menu_devices_root" action="odoo_device.action_devices"/>
-    
+    <menuitem id="menu_devices" name="Manage Devices" parent="menu_devices_root" action="action_devices"/>
+
     <!-- Define the views -->
     <record id="view_device_form" model="ir.ui.view">
         <field name="name">device.form</field>
