--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -12,9 +12,12 @@
     </record>
 
     <!-- Define the menuitems -->
-    <menuitem id="devices_menu_root" name="Devices" sequence="10" >
-            <menuitem id="devices_menu_action" action="action_devices" name="Devices List"/>
-    </menuitem>
+    <menuitem id="devices_menu_root" name="Devices" sequence="10"/>
+    <menuitem id="devices_menu_action" 
+              parent="devices_menu_root" 
+              action="action_devices" 
+              name="Devices List" 
+              sequence="1"/>
 
     <!-- Define the views -->
     <record id="view_device_form" model="ir.ui.view">
