--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,59 +1,63 @@
 <odoo>
-    <!-- Record Definitions -->
-    <record id="action_devices" model="ir.actions.act_window">
-        <field name="name">Devices</field>
-        <field name="res_model">device</field>
-        <field name="view_mode">tree,form</field>
-        <field name="help" type="html">
-            <p class="oe_view_nocontent_create">
-                Create the first device.
-            </p>
-        </field>
-    </record>
+    <data>
 
-    <!-- Menu Definitions -->
-    <menuitem id="devices_menu_root" 
-              name="Devices"  
-              web_icon="devices,static/description/icon.png" 
-              parent="apps.menu_app" 
-              sequence="9525"/>
+        <!-- Record Definitions -->
+        <record id="action_devices" model="ir.actions.act_window">
+            <field name="name">Devices</field>
+            <field name="res_model">device</field>
+            <field name="view_mode">tree,form</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    Create the first device.
+                </p>
+            </field>
+        </record>
 
-    <menuitem id="devices_menu_action" 
-              parent="devices_menu_root" 
-              action="action_devices" 
-              name="Devices List" 
-              sequence="1"/>
+        <!-- Menu Definitions -->
+        <menuitem id="devices_menu_root" 
+                  name="Devices"  
+                  web_icon="devices,static/description/icon.png" 
+                  parent="apps.menu_app" 
+                  sequence="9525"/>
 
-    <!-- Views Definitions -->
-    <record id="view_device_tree" model="ir.ui.view">
-        <field name="name">device.tree</field>
-        <field name="model">device</field>
-        <field name="arch" type="xml">
-            <tree string="Devices">
-                <field name="name"/>
-                <field name="device_type"/>
-                <field name="serial_number"/>
-                <field name="purchase_date"/>
-                <field name="warranty_expiry"/>
-            </tree>
-        </field>
-    </record>
+        <menuitem id="devices_menu_action" 
+                  parent="devices_menu_root" 
+                  action="action_devices" 
+                  name="Devices List" 
+                  sequence="1"/>
 
-    <record id="view_device_form" model="ir.ui.view">
-        <field name="name">device.form</field>
-        <field name="model">device</field>
-        <field name="arch" type="xml">
-            <form string="Device">
-                <sheet>
-                    <group>
-                        <field name="name"/>
-                        <field name="device_type"/>
-                        <field name="serial_number"/>
-                        <field name="purchase_date"/>
-                        <field name="warranty_expiry"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
+        <!-- Views Definitions -->
+        <record id="view_device_tree" model="ir.ui.view">
+            <field name="name">device.tree</field>
+            <field name="model">device</field>
+            <field name="arch" type="xml">
+                <tree string="Devices">
+                    <field name="name"/>
+                    <field name="device_type"/>
+                    <field name="serial_number"/>
+                    <field name="purchase_date"/>
+                    <field name="warranty_expiry"/>
+                </tree>
+            </field>
+        </record>
+
+        <record id="view_device_form" model="ir.ui.view">
+            <field name="name">device.form</field>
+            <field name="model">device</field>
+            <field name="arch" type="xml">
+                <form string="Device">
+                    <sheet>
+                        <group>
+                            <field name="name"/>
+                            <field name="device_type"/>
+                            <field name="serial_number"/>
+                            <field name="purchase_date"/>
+                            <field name="warranty_expiry"/>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
+    </data>
 </odoo>
