--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -13,11 +13,10 @@
             </field>
         </record>
 
-        <!-- Menu Definitions -->
+        <!-- Menu Definitions under Inventory -->
         <menuitem id="devices_menu_root" 
                   name="Devices"  
-                  web_icon="devices,static/description/icon.png" 
-                  parent="apps.menu_app" 
+                  parent="stock.menu_stock_root"  
                   sequence="9525"/>
 
         <menuitem id="devices_menu_action" 
