--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -16,7 +16,7 @@
         <!-- Menu Definitions under Inventory -->
         <menuitem id="devices_menu_root" 
                   name="Devices"  
-                  parent="stock.menu_inventory_root"  <!-- Correct parent menu for Inventory -->
+                  parent="stock.menu_inventory_root" 
                   sequence="9525"/>
 
         <menuitem id="devices_menu_action" 
