--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -4,7 +4,7 @@
         <!-- Action Definition -->
         <record id="action_devices" model="ir.actions.act_window">
             <field name="name">device</field>
-            <field name="res_model">odoo_device.device</field>
+            <field name="res_model">device</field>
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="view_device_tree"/>
             <field name="help" type="html">
