--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -26,37 +26,35 @@
                   name="Manage Devices" 
                   sequence="1"/>
 
-        <!-- Tree View Definition -->
-        <record id="view_device_tree" model="ir.ui.view">
-            <field name="name">device.tree</field>
+
+        <!-- Kanban View Definition -->
+        <record id="view_device_kanban" model="ir.ui.view">
+            <field name="name">device.kanban</field>
             <field name="model">device</field>
             <field name="arch" type="xml">
-                <tree string="Devices">
+                <kanban>
                     <field name="name"/>
                     <field name="device_type"/>
                     <field name="serial_number"/>
-                    <field name="purchase_date"/>
-                    <field name="warranty_expiry"/>
-                </tree>
-            </field>
-        </record>
 
-        <!-- Form View Definition -->
-        <record id="view_device_form" model="ir.ui.view">
-            <field name="name">device.form</field>
-            <field name="model">device</field>
-            <field name="arch" type="xml">
-                <form string="Device">
-                    <sheet>
-                        <group>
-                            <field name="name"/>
-                            <field name="device_type"/>
-                            <field name="serial_number"/>
-                            <field name="purchase_date"/>
-                            <field name="warranty_expiry"/>
-                        </group>
-                    </sheet>
-                </form>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div class="oe_kanban_details">
+                                <strong><field name="name"/></strong>
+                                <div><field name="device_type"/></div>
+                                <div><field name="serial_number"/></div>
+                            </div>
+
+                            <!-- Connect Button -->
+                            <footer>
+                                <button name="action_connect" 
+                                        string="Connect" 
+                                        type="object" 
+                                        class="btn btn-primary"/>
+                            </footer>
+                        </t>
+                    </templates>
+                </kanban>
             </field>
         </record>
 
