--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -5,7 +5,7 @@
         <record id="action_devices" model="ir.actions.act_window">
             <field name="name">Devices</field>
             <field name="res_model">device</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">kanban,form</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                     Create your first device record.
